--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <style>
+      .btn-primary {
+        background-color: #e8751a;
+        border-color: #e8751a;
+      }
+
+      /* Change button color on hover */
+      .btn-primary:hover {
+        background-color: #ff9933;
+        border-color: #ff9933;
+      }
+    </style>
   </head>
   <body>
     <!-- Jargon -->
@@ -14,6 +26,11 @@
       <img src="LogofixZippy.png" alt="" width="250px" style="margin: auto; display: flex" />
     </div>
     <p class="text-center" style="font-size: 14px"><b>Ojek Online | Food Driver | Kurir | Homecare</b></p>
+    <div class="alert alert-warning" role="alert">
+      <marquee
+        >Yuk cobain pake membership, supaya makin hemat 🤩 <span><a href="#">Disini</a></span></marquee
+      >
+    </div>
     <h2 class="text-center mt-4">
       <b>Pilih <span style="color: #ff9933">Layananmu</span> Dulu Ya</b>
     </h2>
@@ -276,6 +293,23 @@
       </div>
     </div>
     <!--Membership-->
+
+    <!--Admin-->
+    <div class="container mt-3 mb-5">
+      <div class="card shadow-lg mb-5 bg-body-tertiary rounded">
+        <div class="card-body">
+          <h3 class="text-center" style="border-bottom: black 2px solid; padding-bottom: 10px">
+            <b>Hubungi <span style="color: #ff9933">Admin</span></b>
+          </h3>
+          <p class="text-center">Hubungi kontak admin jika kamu mempunyai kendala dalam memakai layanan jasa kami</p>
+          <div class="d-grid gap-2">
+            <a class="btn btn-primary" type="button"><i class="bi bi-whatsapp"></i> WhatsApp</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--Admin-->
+
     <script src="main.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
