--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </p>
 
           <!--MemberBronze-->
-          <div class="alert alert-primary mt-4" role="alert" style="display: flex; flex-direction: column; align-items: center">
+          <div class="alert alert-primary mt-4" role="alert" style="display: flex; flex-direction: column; align-items: center; width: 80%">
             <img src="silver.png" alt="" height="100px" class="text-center" />
             <p style="font-size: 20px" class="text-center"><b>Member Bronze</b></p>
             <!-- Button trigger modal -->
@@ -137,7 +137,7 @@
           <!--MemberBronze-->
 
           <!--MembershipSilver-->
-          <div class="alert alert-primary mt-4" role="alert" style="display: flex; flex-direction: column; align-items: center">
+          <div class="alert alert-primary mt-4" role="alert" style="display: flex; flex-direction: column; align-items: center; width: 80%">
             <img src="bronze.png" alt="" class="text-center" height="100px" />
             <p style="font-size: 20px"><b>Member Silver</b></p>
             <!-- Button trigger modal -->
@@ -215,7 +215,7 @@
           <!--MembershipSilver-->
 
           <!--MembershipGold-->
-          <div class="alert alert-primary mt-4" role="alert" style="display: flex; flex-direction: column; align-items: center">
+          <div class="alert alert-primary mt-4" role="alert" style="display: flex; flex-direction: column; align-items: center; width: 80%">
             <img src="gold.png" alt="" height="100px" />
             <p style="font-size: 20px"><b>Member Gold</b></p>
             <!-- Button trigger modal -->
